never use new Boolean()
git-svn-id: https://server.mycore.de/svn/mycore/trunk@25620 7089d063-bc14-496d-ac90-53de1872eb6c