@@ -8,7 +8,7 @@ public abstract class MCRBroadcastingFunctions {
     public static String hasReceived(String sessionSensitive) {
         MCRSession session = MCRSessionMgr.getCurrentSession();
         boolean hasReceived = MCRBroadcastingServlet.hasReceived(session, "true".equals(sessionSensitive.toLowerCase()));
-        return new Boolean(hasReceived).toString();
+        return Boolean.valueOf(hasReceived).toString();
     }
 
 }
